--- a/_posts/2024-06-26-MyLove.markdown
+++ b/_posts/2024-06-26-MyLove.markdown
@@ -4,6 +4,5 @@ title: "My Love by Westlife"
 date: 2024-06-26
 song_name: "My Love"
 ---
-<div>
-<h2>*I'm cooking this stuff...*</h2>
-</div>
+
+>*I'm cooking this stuff...*
