--- a/_posts/1980-06-26-MyLove.markdown
+++ b/_posts/1980-06-26-MyLove.markdown
@@ -1,7 +1,7 @@
 ---
 layout: songs
-title: "My Love by Westlife"
-date: 2024-06-26
+title: "My Love by Westlife(for development purpose)"
+date: 1980-06-26
 song_name: "My Love"
 artist: "Westlife"
 tuning: "Standard EADGBE"
