add halce-renau mini film

--- a/_posts/2025-03-23-halca「恋愛ミリフィルム」.markdown
+++ b/_posts/2025-03-23-halca「恋愛ミリフィルム」.markdown
@@ -35,7 +35,7 @@ Chorus:
 [E7]隠さない[Am7]でいいか[D7]ら
 全[F]部受け止める[G9sus4]から
 
-借[Am]り物の[AnM7/G#]恋だとしても
+借[Am]り物の[AmM7/G#]恋だとしても
 [Am7/G]今はただ君を[C7]焼き付けた[F]い
 [E7]瞼の[Am]スクリーン[D7]に映[F]し出すのは[Fm]
 恋愛ミリフィル[F]ム[C/E] [G] [Fm]
