--- a/_posts/1980-06-26-MyLove.markdown
+++ b/_posts/1980-06-26-MyLove.markdown
@@ -6,6 +6,25 @@ song_name: "My Love"
 artist: "Westlife"
 tuning: "Standard EADGBE"
 youtube: "https://www.youtube.com/embed/YGin8rAZ3Mw"
+chords:
+  Esus4:
+    fingers: [
+      [2, 2],
+      [3, 2],
+      [4, 2]
+    ]
+    barres: []
+    title: "Esus4"
+    position: 1
+  MyCustomChord:
+    fingers: [
+      [1, 1],
+      [2, 3],
+      [3, 3]
+    ]
+    barres: []
+    title: "MyCustomChord"
+    position: 2
 ---
 # This is for development!!!
 An [C]empty street, an [G]empty house<br>
@@ -15,4 +34,4 @@ Im [F]all alone, the rooms are getting [G]smaller.
 I [C]wonder how, I [G]wonder why,<br>
 I [Em]wonder where they [Am]are<br>
 The [F]days we had, the [D/F#]songs we sang [G]together, oh, yeah.<br>
-[D | Bm7b13 | Em7 | Am7 | D9sus4 | Gsus4 → G]
+[D] [Bm7b13] [Em7] [Am7] [D9sus4] [Gsus4] [G] [Esus4] [MyCustomChord]
