--- a/_posts/1980-06-26-MyLove.markdown
+++ b/_posts/1980-06-26-MyLove.markdown
@@ -23,7 +23,7 @@ chords:
       [3, 3]
     ]
     barres: []
-    title: "MyCustomChord"
+    title: "ChordTitle"
     position: 2
 ---
 # This is for development!!!
